<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_item_acceuil"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/section_acceuil" />

        <item
            android:id="@+id/drawer_item_mes_resto"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/section_mes_resto" />

        <item
            android:id="@+id/drawer_item_nouveau_resto"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/section_nouveau_resto" />

        <item
            android:id="@+id/drawer_item_autour_de_moi"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/section_proximite" />

        <item
            android:id="@+id/drawer_item_proche_de"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/section_proximite_place" />
    </group>

</menu>